Skin Modifier does not return to normal after mesh reduced to a single vertex #46567

Closed
opened 2015-10-22 06:22:41 +02:00 by Seth L. · 9 comments

System Information
OS X 10.6.8
NVIDIA GeForce 320M

Blender Version
Broken: 2.76 RC3 fb76f6d
Worked: unknown

Short description of error
If an object has a Skin Modifier on it, the modifier stops working in the event that the mesh is reduced to a single vertex.
While this isn't likely to go noticed by a lot of people, it is inconsistent with expected behavior and may cause confusion.

Exact steps for others to reproduce the error

  1. Create a simple mesh object like a plane
  2. Add a Skin Modifier to the mesh object
  3. In Edit Mode delete all but one vertex from the mesh
  4. Extrude the remaining vertex into an edge and notice it is not "skinned"
  In order to remedy this, the Modifier must be deleted and a new one added from scratch.
**System Information** OS X 10.6.8 NVIDIA GeForce 320M **Blender Version** Broken: 2.76 RC3 fb76f6d Worked: unknown **Short description of error** If an object has a Skin Modifier on it, the modifier stops working in the event that the mesh is reduced to a single vertex. While this isn't likely to go noticed by a lot of people, it is inconsistent with expected behavior and may cause confusion. **Exact steps for others to reproduce the error** 1. Create a simple mesh object like a plane 2. Add a Skin Modifier to the mesh object 3. In Edit Mode delete all but one vertex from the mesh 4. Extrude the remaining vertex into an edge and notice it is not "skinned" ``` In order to remedy this, the Modifier must be deleted and a new one added from scratch.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly
Author

Additional info:

When I submitted this I was on RC3. I've since upgraded to 2.76 and the bug is still present.

It seems not to always happen if you stay in Vertex Select Mode. However, if you switch to Edge Select Mode at any time while having only one vert it seems to happen every time.

Additional info: When I submitted this I was on RC3. I've since upgraded to 2.76 and the bug is still present. It seems not to always happen if you stay in Vertex Select Mode. However, if you switch to Edge Select Mode at any time while having only one vert it seems to happen every time.

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2015-10-23 08:34:12 +02:00

Thanks for the report, but no bug here really, thing is, outside of loose vertices, you need a 'root' vert for this modifier to work (in edit mode, select one vert and hit “Mark Root” in modifier panel). Root vert is circled by a dashed line in edit mode, so you can also delete all verts but two (defining an edge) and, as long as root one is deleted, you'll have no skinning either.

Thanks for the report, but no bug here really, thing is, outside of loose vertices, you need a 'root' vert for this modifier to work (in edit mode, select one vert and hit “Mark Root” in modifier panel). Root vert is circled by a dashed line in edit mode, so you can also delete all verts but two (defining an edge) and, as long as root one is deleted, you'll have no skinning either.
Author

I see! It's all clear now. Thanks for explaining!

Just an idea for the future - how about if an alert message in the modifier were displayed when no root vertex is present?

I see! It's all clear now. Thanks for explaining! Just an idea for the future - how about if an [alert message in the modifier ](https://dl.dropboxusercontent.com/u/686388/posts/blenderbugreports/modifier-alert-message.png) were displayed when no root vertex is present?
Author

Regarding my last comment, I can see now that it is possible to have a mesh with multiple pieces of disconnected geometry, some having a root vert (and therefor skinned) and others not. So even if a root vert is present on some pieces, if a root vert is not present on each piece the object will not be skinned entirely. So if an alert message were to be added it should probably be worded to include this idea.

Regarding my last comment, I can see now that it is possible to have a mesh with multiple pieces of disconnected geometry, some having a root vert (and therefor skinned) and others not. So even if a root vert is present on some pieces, if a root vert is not present on *each* piece the object will not be skinned entirely. So if an alert message were to be added it should probably be worded to include this idea.

Done, thanks for suggestion.

Done, thanks for suggestion.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46567
No description provided.