Fix related to T46567: Skin modifier: add a warning message when no valid root vertex is found.

Otherwise user may have a hard time understanding why their modifier is no more working
after they e.g. deleted some vertices... including the root one. ;)